crates/jsonschema-macros/tests/ui/macro_on_non_struct.rs
#[jsonschema::validator(schema = r#"{"type":"string"}"#)]
fn not_a_struct() {}

fn main() {}
